[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 138.0
margin_top = 168.0
margin_right = 289.0
margin_bottom = 220.0
rect_scale = Vector2( 3.47498, 3.47498 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 151.0
margin_bottom = 24.0

[node name="Size" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Size"

[node name="SizeValue" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 88.0
margin_bottom = 24.0

[node name="SizeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 138.0
margin_bottom = 24.0
text = "SEND"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 151.0
margin_bottom = 52.0

[node name="Speed" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Speed"

[node name="SpeedValue" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 43.0
margin_right = 101.0
margin_bottom = 24.0

[node name="SpeedButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 105.0
margin_right = 151.0
margin_bottom = 24.0
text = "SEND"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SizeButton" to="." method="_on_SizeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SpeedButton" to="." method="_on_SpeedButton_pressed"]
